--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
   </head>
   <body>
     <div id="root"></div>
+    <div id="modal-root"></div>
+    <!-- This is where the modal will be rendered -->
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
